# Chess

./: .gitlab-ci.yml  Chess.opam  README.md  dune-project
lib/: board.ml  board.mli  dune  game_engine.ml  game_engine.mli  global.ml  global.mli  piece.ml  piece.mli  player.ml  player.mli  random_bot.ml  random_bot.mli
test/: utils_board.ml
